(MERCURY-157) add "small" topology option - add DeploymentSize parameter - add ViyaServices instance - add IsSmall/IsMedium conditions - create VMs conditionally - replace hostnames with hostgroups in ansible playpens - add additional hostgroups to ansible inventory - move adding elb listeners to install.sh - parametrize ansible inventory creation - parametrize ansible vars.yml creation - remove update.vars.file.yml (cruft) - remove sas workers code remnants - shorten known_hosts file initialization code - do other small code formatting fixes
Change-Id: I29d5a8792f34ec8264f4eb6140b04f42f0b6edb0

--- a/playbooks/post.deployment.yml
+++ b/playbooks/post.deployment.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: controller
+- hosts: [CASControllerServer]
   become: yes
   become_user: sas
 
@@ -23,7 +23,7 @@
       - cas
 
 
-- hosts: stateful
+- hosts: [shared-vault-server]
   become: yes
   become_user: root
 
@@ -57,5 +57,4 @@
       chown sas:sas /backups
     tags:
       - backups
-
 
