(MERCURY-177) Pull changes from AWS into dev repo
Squashed commit of the following:

commit 587471f8dcaeefde07f8818e38f3f1a304dc08aa
Author: vsnyc <vsnyc@users.noreply.github.com>
Date:   Mon Sep 17 14:19:09 2018 -0400

    RecoveryAlarmController should not be created for I3 instance type

commit a5ec874cba534e660ed59113e7297e166f71bb08
Merge: 6d6bd93 25936f5
Author: Vinod Shukla <vsnyc@users.noreply.github.com>
Date:   Tue Sep 4 12:12:07 2018 -0400

    Merge pull request #9 from SAS-Apps/master

    version 1.2

commit 25936f5f822106ea385f8912810b8639028957f6
Merge: b1578d8 0f2ec98
Author: Johnny Andrews <SAS.Apps@sas.com>
Date:   Tue Sep 4 11:36:42 2018 -0400

    Merge branch '18w25' into aws

    Conflicts:
    	scripts/install.sh
    	templates/sas-viya-master.template.yaml
    	templates/sas-viya.template.yaml

commit 6d6bd9307b92daa5ab80e08de5f993f9e9d7c106
Author: vsnyc <vsnyc@users.noreply.github.com>
Date:   Tue Aug 21 18:42:24 2018 -0400

    Hard-code AZ for testing in sa-east-1

commit 7167f2464f80c1bddfbdd8128c6bc0b9d01a9661
Author: vsnyc <vsnyc@users.noreply.github.com>
Date:   Tue Aug 21 18:22:09 2018 -0400

    Added taskcat test configuration

commit ceb31dabdb3dcc3b8a302b087bcdf6392be2c90a
Author: vsnyc <vsnyc@users.noreply.github.com>
Date:   Wed Aug 8 17:46:24 2018 -0400

    Updated group labels to match documentation

commit a8890183d6c2fe5000e6e48857a75d32435dc2bb
Merge: 40a85fb b1578d8
Author: Vinod Shukla <vsnyc@users.noreply.github.com>
Date:   Sun Aug 5 22:19:47 2018 -0400

    Merge pull request #7 from SAS-Apps/master

    Release 1.1

commit b1578d80b6a7ddd3454f286d43698d997c64e2bd
Merge: 40a85fb 544c5ae
Author: Johnny Andrews <SAS.Apps@sas.com>
Date:   Fri Aug 3 16:23:33 2018 -0400

    Merge remote-tracking branch 'origin/1.1' into aws

    Conflicts:
    	playbooks/post.deployment.yml
    	playbooks/update.vars.file.yml
    	scripts/install.sh
    	templates/sas-viya.template.yaml

commit 544c5ae6375108b15a40f13e368103b638f108df
A

--- a/ci/sas-viya-sa-east-1.json
+++ b/ci/sas-viya-sa-east-1.json
@@ -5,7 +5,7 @@
     },
     {
         "ParameterKey": "AvailabilityZone",
-        "ParameterValue": "$[alfred_genaz_1]"
+        "ParameterValue": "sa-east-1b"
     },
     {
         "ParameterKey": "DeploymentDataLocation",
