--- a/templates/sas-viya.template.yaml
+++ b/templates/sas-viya.template.yaml
@@ -30,13 +30,13 @@ Metadata:
           - PublicSubnetID
           - PrivateSubnetID
       - Label:
-          default: Server DNS configuration (only required for custom DNS name and SSL)
+          default: Server DNS Configuration (only required for custom DNS name and SSL)
         Parameters:
           - DomainName
           - AWSHostedZoneID
           - SSLCertificateARN
       - Label:
-          default: AWS Quick Start Source Location
+          default: AWS Quick Start Configuration
         Parameters:
           - QSS3BucketName
           - QSS3KeyPrefix
@@ -810,6 +810,7 @@ Resources:
           Ref: ProgrammingServices
 
   RecoveryAlarmController:
+    Condition: IsNotI3
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmDescription: Trigger a recovery when instance status check fails more than once in 2 minutes.
