(MERCURY-164) move to ansible 2.4.3 -also: move "(optional) to front of OperatorEmail description text
Change-Id: I1e9f59bda3581ef83dcf3236ed6a3ed5e2988fc1

--- a/templates/sas-viya.template.yaml
+++ b/templates/sas-viya.template.yaml
@@ -201,7 +201,7 @@ Parameters:
   OperatorEmail:
     AllowedPattern: "([a-zA-Z0-9_\\-\\.]+)@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\\]?)|^$"
     ConstraintDescription: must be a valid email address.
-    Description: Email address to send a notification about deployment success or failure (optional).
+    Description: (Optional) Email address to send a notification about deployment success or failure.
     Type: String
     Default: ''
 
